src/parser/snapshots/expr/incrdecr/decrement_post_with_unary_complement.snap
---
source: src/parser/parser.rs
description: increment and decrement with correct precedence
expression: actual.unwrap()
info: ~a--
---
location:
  line: 1
  column: 1
kind:
  unary:
    - complement
    - location:
        line: 1
        column: 2
      kind:
        decrement:
          is_post: true
          e:
            location:
              line: 1
              column: 2
            kind:
              variable: a
