src/parser/snapshots/expr/incrdecr/decrement_pre.snap
---
source: src/parser/parser.rs
description: increment and decrement with correct precedence
expression: actual.unwrap()
info: "--a"
---
location:
  line: 1
  column: 1
kind:
  decrement:
    is_post: false
    e:
      location:
        line: 1
        column: 3
      kind:
        variable:
          name: a
          location:
            line: 1
            column: 3
          original_name: ~
