src/parser/snapshots/expr/incrdecr/horrible_seq_2.snap
---
source: src/parser/parser.rs
description: increment and decrement with correct precedence
expression: actual.unwrap()
info: ~-a++ - -~a--
---
location:
  line: 1
  column: 1
kind:
  binary:
    - subtract
    - location:
        line: 1
        column: 1
      kind:
        unary:
          - complement
          - location:
              line: 1
              column: 2
            kind:
              unary:
                - negate
                - location:
                    line: 1
                    column: 3
                  kind:
                    increment:
                      is_post: true
                      e:
                        location:
                          line: 1
                          column: 3
                        kind:
                          variable: a
    - location:
        line: 1
        column: 9
      kind:
        unary:
          - negate
          - location:
              line: 1
              column: 10
            kind:
              unary:
                - complement
                - location:
                    line: 1
                    column: 11
                  kind:
                    decrement:
                      is_post: true
                      e:
                        location:
                          line: 1
                          column: 11
                        kind:
                          variable: a
